# mcrl

./: CMakeLists.txt  mcrl.h
src/: CMakeLists.txt  mcrl.cpp  mcrl.h
